--- a/css/bondi.css
+++ b/css/bondi.css
@@ -5,6 +5,34 @@
   --yellow-color: #ffc400;
   --section-color: #eff7fa;
 }
+
+::-webkit-scrollbar {
+  width: 13px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  box-shadow: inset 0 0 10px 10px rgb(0 0 0 / 20%);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  background-color: var(--dark-color);
+  border: 1px solid rgb(29, 29, 29);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color:#042c69;
+}
+
 body{
   font-family: 'Roboto', sans-serif;
 }
