--- a/css/bondi.css
+++ b/css/bondi.css
@@ -33,6 +33,9 @@
   background-color:#042c69;
 }
 
+html{
+  scroll-behavior: smooth;
+}
 body{
   font-family: 'Roboto', sans-serif;
 }
@@ -53,8 +56,11 @@ body{
 }
 /* start nav */
 .navbar{
+  width: 100vw;
+  position: fixed;
   background-color: var(--dark-color);
   box-shadow: 0 0 2px 0px #aaa;
+  transition: .6s;
 }
 .navbar .navbar-nav .nav-link{
   color:#fff;
@@ -88,7 +94,7 @@ body{
 /* start landing */
 .landing{
   background-color: var(--dark-color);
-  min-height: calc(100vh - 72px);
+  min-height:100vh;
 }
 /* end landing */
 /* Start Features */
